--- a/index.html
+++ b/index.html
@@ -3,10 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="gerador de senhas, gerador de password">
     <link rel="stylesheet" href="style.css">
     <title>Gerador de senha</title>
 </head>
 <body>
     
+     <img src="assets/logo.png" alt="geradord de senha logo" class="logo">
+
+     <main class="container-input">
+    <span>Tamanho <span id="valor"></span>carateres</span>
+    <input id="slider" class="slider" min="5" max="25" type="range" value="15">
+
+    <button id="button" class= "button-cta">Gerar senha</button>
+    </main>
+
+    <div id="container-password" class="container-password hide">
+        <span class="title">Sua senha gerada foi:</span>
+        <span id="password" class="password"></span>
+        <span>Clique na senha para Copiar.</span>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
