--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
      <img src="assets/logo.png" alt="geradord de senha logo" class="logo">
 
   <main class="container-input">
-    <span>Tamanho <span id="valor"></span>carateres</span>
+    <span>Tamanho <span id="valor"></span> carateres</span>
     <input id="slider" class="slider" min="5" max="25" type="range" value="15">
 
     <button id="button" class= "button-cta" onclick="generatepassword()">Gerar senha</button>
   </main>
 
-    <div id="container-password" class="container-password hide" onclick="copypassword()">
+    <div id="container-password" class="container-password hide9" onclick="copypassword()">
         <span class="title">Sua senha gerada foi:</span>
-        <span id="password" class="password">12345678</span>
+        <span id="password" class="password"></span>
         <span class="toltip">Clique na senha para Copiar.</span>
     </div>
     <script src="script.js"></script>
